--- a/OblivionReloaded/OblivionReloaded.vcxproj
+++ b/OblivionReloaded/OblivionReloaded.vcxproj
@@ -106,6 +106,8 @@
       <ConformanceMode>false</ConformanceMode>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <WholeProgramOptimization>false</WholeProgramOptimization>
+      <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
+      <EnableEnhancedInstructionSet>AdvancedVectorExtensions2</EnableEnhancedInstructionSet>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
